# product-video-creator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRESENTATION.md  README.md  SECURITY.md  batch_video_generator.py  create_product_videos.py  demo.py  generate_demo_gif.py  marketing_demo.py  pyproject.toml  requirements.txt  showcase.py  video_generator.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
assets/: demo.cast  marketing_demo.cast
examples/: video_config.json
sample_output/: video_spec.json
tests/: __init__.py  test_video.py
